--- a/views/lab.ejs
+++ b/views/lab.ejs
@@ -86,9 +86,8 @@
 
                         <div class="hidee" style="margin-top: 0; display: inline;">    <!-- Hide the input visually -->
 
-                            <label for="file" class="file_label" ></label>
-
-<input type="file" id="file" class="file_input" name="file" style="display: none;">
+                          <label for="file" class="file-label">Choose File</label>
+                          <input type="file" id="file" class="file-input" name="file" >
 
 <!-- Add an icon for file upload -->
 <label for="file" >
